--- a/css/styles.css
+++ b/css/styles.css
@@ -3,10 +3,13 @@ body {
   color: #68767f;
   background: url('../img/comps/bg-content.png') no-repeat top center #fff;
 }
+body.greyback {background-color: #fafbfc;}
 
-body.page-home {
+body.longback {
   background: url('../img/comps/bg.png') no-repeat top center #fff;
 }
+
+a, a:hover, a:active, a:focus {color: #f26422;}
 
 h2,h3,h5 {font-weight: normal;}
 h2 {font-size: 55px;}
@@ -18,6 +21,8 @@ h3, h5 {text-align: center;}
 h3 {margin-bottom: 30px;}
 
 img {max-width: 100%;}
+
+.whiteback {background-color: #ffffff;}
 
 #left_curtain, #right_curtain {
   position: absolute; top:0; bottom: 0; background: rgba(242, 100, 35, 1);
@@ -78,11 +83,20 @@ nav.site-header {padding-top: 20px !important;padding-bottom: 20px !important;ba
 .site-header .py-2 {padding-bottom: 0!important; }
 .site-header a.link, .site-header a.link:visited, .site-header a.link:focus, .site-header a.link:hover {font-size: 15px; color: #fff; text-decoration: none;}
 
+.nav-item {position: relative;}
+.nav-item.active::after {
+  content: "."; position: absolute; display: block; width: 100%; height: 2px; background: #fff;
+  text-indent: -1000px; overflow: hidden;
+  top: -20px;
+}
+#mobile_nav_menu .nav-item.active::after {width: 80%; left: 10%; top: 40px;}
+
 .headline {padding-top: 45px;}
 .headline h2, .headline p {color: #ffffff;}
 .headline .sumary {margin: 30px 0; padding: 0 10%;}
 
 .headline .topline {margin-top: 70px;}
+.topline .sumary p {color: #f8deb8;}
 
 .showcase {text-align: center; max-width: 1026px; margin:auto; background: #fff; border-radius: 10px; padding: 46px 20px; box-shadow: rgba(0,0,0,0.1) 0px 0px 50px;}
 .showcase p {font-size: 16px; font-weight: 500; color: #929497;}
@@ -90,12 +104,41 @@ nav.site-header {padding-top: 20px !important;padding-bottom: 20px !important;ba
 
 
 .part-sepa {background: url('../img/comps/bg-sepa.png') no-repeat top center; height: 245px; margin-top: -60px;}
+.grey-faded-sepaline {
+  height: 1px; margin: 10px 0; width: 80%;
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+0,000000+46,000000+100&0.1+0,0.1+46,0+100 */
+  background: -moz-linear-gradient(left, rgba(0,0,0,0.1) 0%, rgba(0,0,0,0.1) 30%, rgba(0,0,0,0) 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(left, rgba(0,0,0,0.1) 0%,rgba(0,0,0,0.1) 30%,rgba(0,0,0,0) 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to right, rgba(0,0,0,0.1) 0%,rgba(0,0,0,0.1) 30%,rgba(0,0,0,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1a000000', endColorstr='#00000000',GradientType=1 ); /* IE6-9 */
+}
+.grey-both-faded-sepaline {
+  height: 1px; margin: 10px auto; width: 60%;
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+0,000000+100&0+0,0.1+50,0+100 */
+  background: -moz-linear-gradient(left, rgba(0,0,0,0) 0%, rgba(0,0,0,0.1) 50%, rgba(0,0,0,0) 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(left, rgba(0,0,0,0) 0%,rgba(0,0,0,0.1) 50%,rgba(0,0,0,0) 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to right, rgba(0,0,0,0) 0%,rgba(0,0,0,0.1) 50%,rgba(0,0,0,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#00000000',GradientType=1 ); /* IE6-9 */
+}
+
 .cont-block {margin-top: 90px;}
+.cont-block.whiteback {margin-top: 0px;}
 .cont-block .row {margin-top: 50px;}
+
 .signs {border-radius: 100%; width: 65px; height: 65px; display: inline-block; background: #feefe8; text-align: center; vertical-align: middle; line-height: 60px; margin-bottom: 20px;}
 .signs.deep {background: #f26422;}
+.signs.small {width: 38px; height: 38px; line-height: 34px;}
+a .signs {margin-bottom: 0;}
 
-.confetti {background: url('../img/comps/deco.png') no-repeat top center; padding: 50px 0 150px;}
+.confetti {
+  background-image: url('../img/comps/deco.png');
+  background-repeat: no-repeat;
+  background-position: top center; 
+  padding: 50px 0 150px;
+}
+.confetti.type2 {background-image: url('../img/comps/deco-2.png');}
+.confetti.type3 {background-image: url('../img/comps/deco-3.png'); padding-top: 130px;}
+
 
 footer {background: url('../img/comps/sepa-footer.png') no-repeat top center #1b1a36; background-size: 100% auto;}
 footer .container {padding-top: 100px;}
@@ -318,6 +361,7 @@ footer ul li.item-green-light {background: url('../img/icons/green.png') no-repe
 
 
 .no-h-padding {padding-left: 0; padding-right: 0;}
+.no-margin-top {margin-top: 0 !important;}
 
 /*** ABOUT US ***/
 .team-members {position: relative; overflow-x: hidden; margin-top: 80px; padding-top: 30px; padding-bottom: 30px;}
@@ -414,3 +458,75 @@ footer ul li.item-green-light {background: url('../img/icons/green.png') no-repe
 .page-features .feature-row.left-content > div:nth-child(1) {background: none;}
 .page-features .feature-row > div:nth-child(1), .page-features .feature-row > div:nth-child(3) {background: url("../img/comps/deco-feature-left.png") no-repeat left top;}
 .page-features h3 {text-align: left;}
+
+/*** Security ***/
+.page-security .security-row {padding-top: 100px;}
+.page-security .part-sepa {margin-top: -100px;}
+
+
+/*** Jobs ***/
+.job-box {padding: 30px; box-shadow: rgba(0,0,0,0.1) 0px 0px 50px; margin: 10px 0; background: #fff;}
+.page-jobs .accordionset .card-header {background-color: #eee; margin-bottom: 10px; }
+.we-offer-jobs {padding-bottom: 50px;}
+
+/*** Pricing ***/
+.plan-row > div {padding: 0; border-left: solid 1px #feefe8;}
+.plan-row > div:first-child {border-left: none;}
+.planbox { background: #fff; color: #4f5a79; text-align: center; padding: 30px 0px 40px 0px; position: relative; }
+.planbox, .planbox .box-inner {
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+}
+.planbox:hover {margin: -20px; z-index: 5; border-radius: 20px !important; box-shadow: rgba(0,0,0,0.1) 0px 0px 50px;}
+.planbox:hover .box-inner {padding: 20px 0;}
+.planbox.firstbox {border-radius: 20px 0 0 20px;}
+.planbox.lastbox {border-radius: 0 20px 20px 0;}
+.planbox .box-inner {width: 80%; max-width: 240px; margin: auto;}
+.planbox .header-block {}
+.planbox .header-block .plan-title {display:inline-block; background: #feefe8; padding: 10px 30px; border-radius: 100px; font-size: 16px; color: #f87639; text-transform: uppercase;}
+.planbox .price-block {margin: 20px 0;}
+.planbox .price-block sup {font-size: 20px;}
+.planbox .price-block b {font-size: 50px; color: #f87639;}
+.planbox .price-block sub {font-size: 16px;}
+
+.planbox .detail-block {font-size: 13px; margin: 30px 0; padding: 0 20px;}
+.planbox .detail-block h5 {font-size: 16px; color: #1f2c35; font-weight: bold;}
+
+.planbox .items-block {text-align: left; font-size: 14px; min-height: 180px;} 
+
+ul.checker {margin: 0; padding: 0; list-style: none;}
+ul.checker li {
+  padding-left: 26px;
+  background: url("../img/icons/check-in-circle.png") no-repeat left 4px;
+  margin-bottom: 20px;
+}
+
+ul.pricing_switcher {margin: 0; padding: 3px; list-style: none; display: inline-block;}
+ul.pricing_switcher {background: #e26a26; color: #ffffff; border-radius: 100px;}
+ul.pricing_switcher li {display: inline-block; padding: 10px 30px; cursor: pointer;}
+ul.pricing_switcher li.active {background: #ffffff; color: #f26422; border-radius: 100px !important;}
+ul.pricing_switcher li:first-child {border-radius: 100px 0 0 100px;}
+ul.pricing_switcher li:last-child {border-radius: 0 100px 100px 0;}
+
+.addon-features {color: #55646e; font-size: 15px;}
+ul.addon-features {margin: 0; margin-bottom: 20px; padding: 0; list-style: none; display: inline-block;}
+ul.addon-features li {background-repeat: no-repeat; background-position: left 3px; display: inline-block; margin: 10px 30px; padding-left: 45px; vertical-align: top; line-height: 30px;}
+.addon-features .item-cache {background-image: url("../img/icons/cache-green.png");}
+.addon-features .item-log {background-image: url("../img/icons/clock-green.png");}
+.addon-features .item-support {background-image: url("../img/icons/shake-green.png");}
+.addon-features .item-event {background-image: url("../img/icons/calendar-green.png");}
+
+.page-pricing .you-need-something {font-size: 22px; color: #1f2c35; padding: 0 10%;}
+
+
+.accordionset h5 {text-align: left;}
+.accordionset h5 .btn-link {color: #1f2c35; text-align: left; font-size: 20px; padding-left: 0; padding-right: 0;}
+.accordionset h5 .btn-link, .accordionset h5 .btn-link:focus {text-decoration: none; width: 100%; overflow: hidden; white-space: normal;}
+
+.accordionset h5 .btn-link:after {font-family: "Font Awesome 5 Free"; font-weight: 900; content: "\f106"; position: absolute; right: 10px; top: 24px;}
+.accordionset h5 .btn-link.collapsed:after {content: "\f107";}
+
+.accordionset .card {border: none;}
+.accordionset .card-header {border-bottom: solid 1px #eee; background: none;}
+
+.pricing-questions h3 {text-align: left;}
